--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,35 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+dotnetcore/com.halffulldata.halo5stats.api/bin/Debug/netcoreapp3.1/appsettings.Development.json
+dotnetcore/com.halffulldata.halo5stats.api/bin/Debug/netcoreapp3.1/com.halffulldata.halo5stats.api.deps.json
+dotnetcore/com.halffulldata.halo5stats.api/bin/Debug/netcoreapp3.1/com.halffulldata.halo5stats.api.dll
+dotnetcore/com.halffulldata.halo5stats.api/bin/Debug/netcoreapp3.1/com.halffulldata.halo5stats.api.exe
+dotnetcore/com.halffulldata.halo5stats.api/bin/Debug/netcoreapp3.1/com.halffulldata.halo5stats.api.pdb
+dotnetcore/com.halffulldata.halo5stats.api/bin/Debug/netcoreapp3.1/com.halffulldata.halo5stats.api.runtimeconfig.dev.json
+dotnetcore/com.halffulldata.halo5stats.api/bin/Debug/netcoreapp3.1/com.halffulldata.halo5stats.api.runtimeconfig.json
+dotnetcore/com.halffulldata.halo5stats.api/bin/Debug/netcoreapp3.1/Microsoft.AspNetCore.JsonPatch.dll
+dotnetcore/com.halffulldata.halo5stats.api/bin/Debug/netcoreapp3.1/Microsoft.AspNetCore.Mvc.NewtonsoftJson.dll
+dotnetcore/com.halffulldata.halo5stats.api/bin/Debug/netcoreapp3.1/Newtonsoft.Json.Bson.dll
+dotnetcore/com.halffulldata.halo5stats.api/bin/Debug/netcoreapp3.1/Newtonsoft.Json.dll
+dotnetcore/com.halffulldata.halo5stats.api/obj/com.halffulldata.halo5stats.api.csproj.nuget.dgspec.json
+dotnetcore/com.halffulldata.halo5stats.api/obj/com.halffulldata.halo5stats.api.csproj.nuget.g.props
+dotnetcore/com.halffulldata.halo5stats.api/obj/com.halffulldata.halo5stats.api.csproj.nuget.g.targets
+dotnetcore/com.halffulldata.halo5stats.api/obj/project.assets.json
+dotnetcore/com.halffulldata.halo5stats.api/obj/project.nuget.cache
+dotnetcore/com.halffulldata.halo5stats.api/obj/Debug/netcoreapp3.1/com.halffulldata.halo5stats.api.AssemblyInfo.cs
+dotnetcore/com.halffulldata.halo5stats.api/obj/Debug/netcoreapp3.1/com.halffulldata.halo5stats.api.AssemblyInfoInputs.cache
+dotnetcore/com.halffulldata.halo5stats.api/obj/Debug/netcoreapp3.1/com.halffulldata.halo5stats.api.assets.cache
+dotnetcore/com.halffulldata.halo5stats.api/obj/Debug/netcoreapp3.1/com.halffulldata.halo5stats.api.csproj.CopyComplete
+dotnetcore/com.halffulldata.halo5stats.api/obj/Debug/netcoreapp3.1/com.halffulldata.halo5stats.api.csproj.CoreCompileInputs.cache
+dotnetcore/com.halffulldata.halo5stats.api/obj/Debug/netcoreapp3.1/com.halffulldata.halo5stats.api.csproj.FileListAbsolute.txt
+dotnetcore/com.halffulldata.halo5stats.api/obj/Debug/netcoreapp3.1/com.halffulldata.halo5stats.api.csprojAssemblyReference.cache
+dotnetcore/com.halffulldata.halo5stats.api/obj/Debug/netcoreapp3.1/com.halffulldata.halo5stats.api.dll
+dotnetcore/com.halffulldata.halo5stats.api/obj/Debug/netcoreapp3.1/com.halffulldata.halo5stats.api.exe
+dotnetcore/com.halffulldata.halo5stats.api/obj/Debug/netcoreapp3.1/com.halffulldata.halo5stats.api.genruntimeconfig.cache
+dotnetcore/com.halffulldata.halo5stats.api/obj/Debug/netcoreapp3.1/com.halffulldata.halo5stats.api.MvcApplicationPartsAssemblyInfo.cache
+dotnetcore/com.halffulldata.halo5stats.api/obj/Debug/netcoreapp3.1/com.halffulldata.halo5stats.api.pdb
+dotnetcore/com.halffulldata.halo5stats.api/obj/Debug/netcoreapp3.1/com.halffulldata.halo5stats.api.RazorTargetAssemblyInfo.cache
+dotnetcore/com.halffulldata.halo5stats.api/obj/Debug/netcoreapp3.1/project.razor.json
+dotnetcore/com.halffulldata.halo5stats.api/obj/Debug/netcoreapp3.1/staticwebassets/com.halffulldata.halo5stats.api.StaticWebAssets.Manifest.cache
+dotnetcore/com.halffulldata.halo5stats.api/obj/Debug/netcoreapp3.1/staticwebassets/com.halffulldata.halo5stats.api.StaticWebAssets.xml
